Remove test code that used deprecated constructors for Numbers (calling valueOf) now