@@ -117,7 +117,7 @@ public class BCodecTest {
         assertEquals("Encoding a null Object should return null", null, result);
 
         try {
-            final Object dObj = new Double(3.0);
+            final Object dObj = Double.valueOf(3.0d);
             bcodec.encode(dObj);
             fail("Trying to url encode a Double object should cause an exception.");
         } catch (final EncoderException ee) {
@@ -141,7 +141,7 @@ public class BCodecTest {
         assertEquals("Decoding a null Object should return null", null, result);
 
         try {
-            final Object dObj = new Double(3.0);
+            final Object dObj = Double.valueOf(3.0d);
             bcodec.decode(dObj);
             fail("Trying to url encode a Double object should cause an exception.");
         } catch (final DecoderException ee) {
