@@ -201,7 +201,7 @@ public class QuotedPrintableCodecTest {
         assertEquals( "Encoding a null Object should return null", null, result);
 
         try {
-            final Object dObj = new Double(3.0);
+            final Object dObj = Double.valueOf(3.0d);
             qpcodec.encode( dObj );
             fail( "Trying to url encode a Double object should cause an exception.");
         } catch (final EncoderException ee) {
@@ -232,7 +232,7 @@ public class QuotedPrintableCodecTest {
         assertEquals( "Decoding a null Object should return null", null, result);
 
         try {
-            final Object dObj = new Double(3.0);
+            final Object dObj = Double.valueOf(3.0d);
             qpcodec.decode( dObj );
             fail( "Trying to url encode a Double object should cause an exception.");
         } catch (final DecoderException ee) {
